--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -85,6 +85,7 @@
             android:fontFamily="@font/fontfam"/>
 
         <ImageView
+            android:id="@+id/arrowImg"
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:layout_marginTop="15dp"
